# rules_df

./: .gitignore  README.md  WORKSPACE  pyproject.toml
defs/: BUILD  deps.bzl  py_init.bzl
src/py/: BUILD  hello_absl.py
src/rust/: BUILD  main.rs
